refactor seller onboard lifycycle
